<resources>
    <string name="app_name">WeblibApplication</string>
    <string name="start">Commencer</string>
    <string name="reset">Reset\n</string>
    <string name="delay">Délai entre chaque accord :</string>
    <string name="five_sec">5 secondes</string>
    <string name="ten_sec">10 secondes</string>
    <string name="fifteen_sec">15 secondes</string>
    <string name="minor">Inclus accords mineurs</string>
    <string name="sharp_flat">"Inclus accords bémol et dièse "</string>
</resources>